Add heroku deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           name: Test
 
 workflows:
+  heroku_deploy:
+    jobs:
+      - heroku/deploy-via-git
   main:
     jobs:
       - build-and-test
