--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,2 @@
-appdirs==1.4.3
-attrs==19.3.0
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-contentful==1.12.3
-distlib==0.3.0
-filelock==3.0.12
 Flask==1.1.1
-idna==2.9
-importlib-metadata==1.5.0
-itsdangerous==1.1.0
-Jinja2==2.11.1
-livereload==2.6.1
-loguru==0.4.1
-MarkupSafe==1.1.1
-more-itertools==8.2.0
-packaging==20.3
-pluggy==0.13.1
-psycopg2==2.8.4
-py==1.8.1
-PyGreSQL==5.1
-pyparsing==2.4.7
-pytest==5.4.1
-python-dateutil==2.8.1
-python-dotenv==0.11.0
-requests==2.23.0
-six==1.14.0
-tornado==6.0.3
-urllib3==1.25.8
-virtualenv==20.0.5
-wcwidth==0.1.9
-Werkzeug==1.0.0
-zipp==3.0.0
+pytest>=1.0.0
