--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,90 @@
+# version: 2.1
+
+# orbs:
+#   python: circleci/python@0.2.1
+#   heroku: circleci/heroku@1.0.1
+
+# jobs:
+#   build-and-test:
+#     executor: python/default
+#     steps:
+#       - checkout
+#       - python/load-cache
+#       - python/install-deps
+#       - python/save-cache
+#       - run:
+#           command: python -m pytest
+#           name: Test
+
+# workflows:
+#   heroku_deploy:
+#     jobs:
+#       - heroku/deploy-via-git
+#   main:
+#     jobs:
+#       - build-and-test
+
+
 version: 2.1
-
-orbs:
-  python: circleci/python@0.2.1
-  heroku: circleci/heroku@1.0.1
-
 jobs:
-  build-and-test:
-    executor: python/default
+  build:
+    docker:
+      - image: python:3.5
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
-      - run:
-          command: python -m pytest
-          name: Test
 
-workflows:
-  heroku_deploy:
-    jobs:
-      - heroku/deploy-via-git
-  main:
-    jobs:
-      - build-and-test
+      - restore_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+
+      - run:
+          name: Install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - save_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          paths:
+            - "venv"
+
+      - run:
+          name: Install dockerize
+          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.3.0
+
+      - run:
+          name: Run unit tests
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            python -m pytest
+      - setup_remote_docker
+
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+      - run:
+         name: Build Docker image
+         command: docker build -t mlabouardy/movies-store:$CIRCLE_SHA1 .
+
+      - run:
+          name: Push to DockerHub
+          command: |
+            docker login -u$DOCKERHUB_LOGIN -p$DOCKERHUB_PASSWORD
+            docker push mlabouardy/movies-store:$CIRCLE_SHA1
+      - run:
+          name: Setup Heroku
+          command: |
+            chmod +x .circleci/setup-heroku.sh
+            .circleci/setup-heroku.sh
+      - run:
+          name: Deploy to Heroku
+          command: |
+            cd app/
+            git push heroku master
