Update docker repo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
           name: Push to DockerHub
           command: |
             docker login -u$DOCKERHUB_LOGIN -p$DOCKERHUB_PASSWORD
-            docker push mlabouardy/movies-store:$CIRCLE_SHA1
+            docker push trevorobrien/test-cci:$CIRCLE_SHA1
       - run:
           name: Setup Heroku
           command: |
