--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
             mv /tmp/docker/* /usr/bin
       - run:
          name: Build Docker image
-         command: docker build -t mlabouardy/movies-store:$CIRCLE_SHA1 .
+         command: docker build -t trevorobrien/test-cci:$CIRCLE_SHA1 .
 
       - run:
           name: Push to DockerHub
