--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,16 @@
 
 
 version: 2.1
+
+orbs:
+  heroku: circleci/heroku@1.0.1
+workflows:
+  heroku_deploy:
+    jobs:
+      - heroku/deploy-via-git
+      requires:
+        - build
+
 jobs:
   build:
     docker:
