--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,8 @@ orbs:
 workflows:
   heroku_deploy:
     jobs:
-      - heroku/deploy-via-git
+      - build
+      - heroku/deploy-via-git:
         requires:
           - build
 
@@ -81,8 +82,8 @@ jobs:
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             mv /tmp/docker/* /usr/bin
       - run:
-         name: Build Docker image
-         command: docker build -t trevorobrien/test-cci:$CIRCLE_SHA1 .
+          name: Build Docker image
+          command: docker build -t trevorobrien/test-cci:$CIRCLE_SHA1 .
 
       - run:
           name: Push to DockerHub
