--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ workflows:
   heroku_deploy:
     jobs:
       - build
-      - heroku/deploy-via-git: # Use the pre-configured job, deploy-via-git
+      - deployment: # Use the pre-configured job, deploy-via-git
           requires:
             - build
 
@@ -90,3 +90,11 @@ jobs:
           command: |
             docker login -u$DOCKERHUB_LOGIN -p$DOCKERHUB_PASSWORD
             docker push trevorobrien/test-cci:$CIRCLE_SHA1
+
+deployment:
+  staging:
+    branch: master
+    commands:
+      - docker login --email=$HEROKU_LOGIN --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY registry.heroku.com
+      - docker build --rm=false -t registry.heroku.com/test-cci/web .
+      - docker push registry.heroku.com/test-cci/web:latest
