--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,3 @@
-# version: 2.1
-
-# orbs:
-#   python: circleci/python@0.2.1
-#   heroku: circleci/heroku@1.0.1
-
-# jobs:
-#   build-and-test:
-#     executor: python/default
-#     steps:
-#       - checkout
-#       - python/load-cache
-#       - python/install-deps
-#       - python/save-cache
-#       - run:
-#           command: python -m pytest
-#           name: Test
-
-# workflows:
-#   heroku_deploy:
-#     jobs:
-#       - heroku/deploy-via-git
-#   main:
-#     jobs:
-#       - build-and-test
-
-
 version: 2.1
 
 orbs:
@@ -89,7 +62,7 @@ jobs:
             docker push trevorobrien/test-cci:$CIRCLE_SHA1
 
       - run:
-          name: Push to DockerHub
+          name: Push to Heroku
           command: |
             docker login --email=$HEROKU_LOGIN --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY registry.heroku.com
             docker build --rm=false -t registry.heroku.com/test-cci/web .
